--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <h1 class="title">Film Finder</h1>
         <div>
-            <div>Search:<input type="text" id="search_filter"></div>
+            <div class="searchheader">Search:<input type="text" id="search_filter"></div>
             <form id="filters" class="filter_box">
                 <div id="checkorradio" class="checkradio">
                     Pick one
